Fixed Some Overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,22 +60,29 @@
   font-style: normal;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-image: url("/global-bg.svg") !important;
   background-size: contain !important;
   background-repeat: repeat !important;
   width: 100% !important;
+  overflow-x: hidden;
 }
 
-  /* Hide number input arrows */
-  input[type="number"]::-webkit-outer-spin-button,
-  input[type="number"]::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-  }
-  input[type="number"] {
-      -moz-appearance: textfield; /* Firefox */
-  }
+/* Hide number input arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
 
 /* Flipbook Styles */
 
